qa/apps/portal-ui-release-cqdg-305/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui-release-cqdg-305
  name: portal-ui-release-cqdg-305
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui-release-cqdg-305
  template:
    metadata:
      labels:
        app: portal-ui-release-cqdg-305
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:feature-cqdg-305-45b1f6d-1692987307 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui-release-cqdg-305"}
        name: portal-ui-release-cqdg-305
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.50'
          limits:
            memory: "512Mi"
            cpu: '1.00'
